# Mindflow

./: .OmniMind-project-structure.md  .complexity-log.md  .editorconfig  .env  .env.contextplus.example  .env.example  .gitignore  .mcp.json  .normalize-agent-project-structure.md  AGENTS.md  AGENT_FIXES_STATUS.md  ANALISE-CLAUDE-CODE-COMPLETA.md  ANALISE-ERROR-HANDLING-CLAUDE-VS-MINDFLOW.md  ANALISE-SISTEMA-SKILLS.md  ANALISE-SISTEMAS-NAO-MIGRADOS-CLAUDE-CODE.md  ANALISE_MINDFLOW_COMPLETA.md  ANALYSIS_REPORT.md  ARCHITECTURE.md  Avaliacao_MindFlow_2026.docx  CHECKLIST.md  CLAUDE.md  CODE-REVIEW-CORRECTIONS-APPLIED.md  CODEX_FINAL.md  CODEX_INTEGRATION.md  COMMANDS.md  COORDINATION_ANALYSIS.md  DEEP_WORK_IMPLEMENTATION_COMPLETE.md  DEEP_WORK_SUMMARY.md  DELIVERABLES_SUMMARY.md  DESIGN.md  DEVELOPMENT_GUIDE.md  DOCUMENTACAO_FALHAS_MINDFLOW.md  DOCUMENTACAO_SISTEMA.md  DOCUMENTATION_INDEX.md  ENHANCED_FILESYSTEM_IMPLEMENTATION.md  ESTRUTURA_MINDFLOW_BACKEND.md  EXECUTIVE_SUMMARY.md  FASE1_IMPLEMENTADA.md  FASE2_FINAL.md  FASE2_PROGRESS.md  (+58 more)
python/: .complexity-log.md  .env.example  .pre-commit-config.yaml  .python-project-structure.md  ARCHITECTURE_IMPLEMENTATION.md  ERROR_HANDLING_GUIDE.md  MIGRATION_SUMMARY.md  MINDFLOW_STRUCTURE_DOCUMENTATION.md  Makefile  README.md  README_BACKEND_CORRECTIONS.md  README_VERTEX_TESTS.md  VALIDATION_REPORT.md  alembic.ini  check_agents_files.py  clean_references.py  demo_cli_usage.md  demo_fix.py  demo_orchestrator_ux.py  demo_tools_simple.py  demo_tools_ux.py  demo_ux_simple.py  docker-compose.backend.yml  enhanced_ux_summary.md  generate_individual_docs.py  mapper_documentation.py  migrate_workers.py  phase1_clean_agents.py  phase1_clean_enhanced.py  phase3_unification.py  phase4_reorganization.py  phase5_cleanup.py  prompt_coherence_check.py  pyproject.toml  pytest.ini  requirements-test.txt  simple_validation.py  test_chains_api.py  test_cli_simple.py  test_complete_api.py  (+20 more)
python/backend/: database.py  requirements.txt
python/backup_personalities_20260307_205536/: __init__.py
python/backup_personality_20260307_205538/: __init__.py  cache.py  configuration.py  dynamic_prompts.py  selector.py
python/backup_tools_originals/tools/: __init__.py  browser_search.py  sandbox.py
python/docs/: planning-trigger-executive-summary.md  planning-trigger-guide.md
python/docs/analysis/: TOOL_MIGRATION_FINAL_SUMMARY.md  TOOL_MIGRATION_PROGRESS.md  TOOL_V3_PROJECT_COMPLETE.md  TOOL_V3_TESTS_COMPLETE_SUMMARY.md
python/docs/sprints/: sprint-1-planning-trigger-schemas.md  sprint-2-metrics-integration.md  sprint-3-cache-persistence.md  sprint-4-cleanup-docs-rollout.md
python/examples/: dynamic_grpc_config_example.py  enhanced_grpc_usage_example.py  enhanced_researcher_example.py  grpc_advanced_integration_example.py  grpc_config_demo.py  grpc_usage_example.py  performance_basic_demo.py  performance_grpc_demo.py  performance_grpc_optimization_example.py  phase4_integration_demo.py  phase4_simple_demo.py  resilience_grpc_demo.py  simplified_exceptions_demo.py  streaming_tool_execution.py
python/mindflow_backend/: PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PRD-Tools-Reorganization.md  RESTRUCTURE_PHASE1.md  STORAGE_MIGRATION_COMPLETE.md  STORAGE_RESTRUCTURE_SUMMARY.md  __init__.py  main.py
python/mindflow_backend/agents/: __init__.py  _base.py  _registry.py  node_registry.py  output_categorizer.py  planner_agent.py  research.py  session_review_agent.py  stream_event_queue.py  tools.py
python/mindflow_backend/api/: docs.py  router.py  sse.py
python/mindflow_backend/archive/: callable_executor.py  tool_invocation.py  tool_loop.py  tool_orchestrator.py
python/mindflow_backend/chains/: __init__.py  catalog.py  factory.py
python/mindflow_backend/commands/: IMPLEMENTATION_SUMMARY.md  __init__.py  executor.py  loader.py  parser.py  registry.py  types.py
python/mindflow_backend/communication/: __init__.py
python/mindflow_backend/config/: __init__.py  agents.py  mcp.py  personality_rules.py  specialist_rules.py
python/mindflow_cli/: __init__.py  __main__.py  app.py  client.py  render.py
python/mindflow_desktop/: __init__.py  launcher.py  main.py
python/omnimind_agents/: .chat_stream_normalizer.py.swp  __init__.py  chat_stream_normalizer.py  deep_agent_config.py  dynamic_prompt.py  node_registry.py  output_categorizer.py  providers.py  safe_backend.py  stream_event_queue.py  types.py
python/omnimind_backend/: AGENT_ARCHITECTURE.md  MEMORY_MIGRATION_SUMMARY.md  __init__.py  main.py  memory_imports_map.txt
python/omnimind_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/omnimind_cli/: __init__.py  __main__.py  app.py  client.py  render.py  sse.py
python/omnimind_desktop/: __init__.py  launcher.py  main.py
python/scripts/: backup_swarm_data.py  backup_swarm_data.sh  benchmark_agent_transport.py  gen_proto.sh  setup_local_stack.sh  start_desktop_stack.sh  test_model_response.py  verify_obsidian_docs_coverage.sh  verify_vertex_stream.py
python/tests/: README.md  __init__.py  conftest.py  test_agent_personalities.py  test_agent_registry.py  test_agent_request_schema.py  test_agent_runtime_stream_contract.py  test_agent_stream_route.py  test_auth.py  test_chat_stream_normalizer.py  test_chunk_extract.py  test_chunk_scorer.py  test_cli_commands.py  test_complexity_scorer.py  test_context_governance_schemas.py  test_context_guard.py  test_context_quality.py  test_cors_production.py  test_dt_component_router.py  test_dt_scoring.py  test_dynamic_prompt.py  test_enhanced_researcher_integration.py  test_feature_flags.py  test_grpc_agent_runtime_service.py  test_mind_job_lifecycle.py  test_mind_project_discovery.py  test_node_registry.py  test_normalization_schemas.py  test_orchestrator_decision.py  test_orchestrator_graph.py  test_orchestrator_router.py  test_orchestrator_schemas.py  test_output_categorizer.py  test_phase_gates.py  test_providers.py  test_rate_limiter.py  test_request_context.py  test_runtime_orchestrated_events.py  test_runtime_stream.py  test_safe_backend.py  (+6 more)
(+3645 files in other folders)
