[project]
name = "omnimind-backend"
version = "0.1.0"
description = "OmniMind backend Python (FastAPI + gRPC + PostgreSQL + KuzuDB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "kuzu>=0.5.0",
  "deepagents>=0.1.0",
  "fastapi>=0.116.0",
  "grpcio>=1.74.0",
  "grpcio-tools>=1.74.0",
  "httpx>=0.28.1",
  "langchain>=0.3.27",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-google-vertexai>=2.0.0",
  "langchain-ollama>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.67",
  "langgraph-checkpoint-postgres>=2.0.15",
  "numpy>=2.0.0",
  "orjson>=3.11.3",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dateutil>=2.9.0.post0",
  "rich>=13.9.0",
  "sse-starlette>=2.2.1",
  "typer>=0.16.0",
  "PySide6>=6.9.0",
  "uvicorn[standard]>=0.35.0",
  "structlog>=25.5.0",
  "tenacity>=9.1.4",
  "pika>=1.3.2",
  "aio-pika>=9.4.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.11",
]

[project.scripts]
omnimind-api = "omnimind_backend.main:run"
omnimind-worker = "omnimind_backend.workers.worker:run"
omnimind-new-worker = "omnimind_backend.workers.main:main"
omnimind-grpc = "omnimind_backend.grpc.server:run"
omnimind-desktop = "omnimind_desktop.launcher:run"
omnimind-desktop-ui = "omnimind_desktop.main:run_ui"
omnimind-cli = "omnimind_cli.app:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
  "live: marks tests that require live external services/credentials",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["omnimind_backend", "omnimind_cli", "omnimind_desktop", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["omnimind_backend", "omnimind_cli", "omnimind_desktop"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
  "omnimind_backend/grpc/generated",
  "omnimind_backend/storage/migrations",
]

[[tool.mypy.overrides]]
module = [
  "omnimind_backend.grpc.generated.*",
  "alembic.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.setuptools.packages.find]
include = ["omnimind_backend*", "omnimind_cli*", "omnimind_desktop*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
