[project]
name = "mindflow-backend"
version = "0.1.0"
description = "MindFlow backend Python (FastAPI + gRPC + PostgreSQL + KuzuDB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "kuzu>=0.5.0",
  "deepagents>=0.1.0",
  "docker>=7.1.0",
  "fastapi>=0.116.0",
  "grpcio>=1.74.0",
  "grpcio-tools>=1.74.0",
  "httpx>=0.28.1",
  "langchain>=0.3.27",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-google-vertexai>=2.0.0",
  "langchain-ollama>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.67",
  "langgraph-checkpoint-postgres>=2.0.15",
  "numpy>=2.0.0",
  "orjson>=3.11.3",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dateutil>=2.9.0.post0",
  "rich>=13.9.0",
  "sse-starlette>=2.2.1",
  "typer>=0.16.0",
  "PySide6>=6.9.0",
  "uvicorn[standard]>=0.35.0",
  "structlog>=25.5.0",
  "loguru>=0.7.0",
  "tenacity>=9.1.4",
  "pika>=1.3.2",
  "aio-pika>=9.4.1",
  "psutil>=7.2.2",
  "asyncpg>=0.31.0",
  "pgvector>=0.3.0",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
  "PyPDF2>=3.0.0",
  "sentence-transformers>=2.2.0",
  "beautifulsoup4>=4.14.3",
  "python-frontmatter>=1.1.0",
  "pathspec>=0.12.1",
  "cryptography>=42.0.0",  # Secure storage encryption
  "keyring>=24.0.0",  # Cross-platform credential storage
  "pywin32>=306; sys_platform == 'win32'",  # Windows Credential Manager
  "SecretStorage>=3.3.0; sys_platform == 'linux'",  # Linux libsecret
  "authlib>=1.3.0",  # OAuth2 library
  "bleach>=6.0.0",  # HTML sanitization
  "html5lib>=1.1",  # HTML parsing (for bleach)
  "bandit>=1.7.0",  # Python security linter
  "safety>=3.0.0",  # Dependency vulnerability scanner
  "sarif-om>=1.0.0",  # SARIF format
  "lightpanda-py>=0.2.0",  # LightPanda Python wrapper for browser automation
  "playwright>=1.52.0",  # Browser automation (compatible with LightPanda CDP)
  "asyncpg>=0.29.0",  # PostgreSQL async driver for snapshot persistence
  "docker>=7.1.0",  # Docker SDK for container management
  "httpx>=0.27.0",  # Async HTTP client for health checks
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.11",
  "pip-audit>=2.7.0",  # Dependency vulnerability scanning — run: pip-audit
]

[project.scripts]
mindflow-api = "mindflow_backend.main:run"
mindflow-worker = "mindflow_backend.workers.main:main"
mindflow-new-worker = "mindflow_backend.workers.main:main"
mindflow-grpc = "mindflow_backend.grpc_internal.server:run"
mindflow-desktop = "mindflow_desktop.launcher:run"
mindflow-desktop-ui = "mindflow_desktop.main:run_ui"
mindflow-cli = "mindflow_cli.app:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
  "live: marks tests that require live external services/credentials",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["mindflow_backend", "mindflow_cli", "mindflow_desktop", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mindflow_backend", "mindflow_cli", "mindflow_desktop"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
  "mindflow_backend/grpc/generated",
  "mindflow_backend/storage/migrations",
]

[[tool.mypy.overrides]]
module = [
  "mindflow_backend.grpc.generated.*",
  "alembic.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.setuptools.packages.find]
include = ["mindflow_backend*", "mindflow_cli*", "mindflow_desktop*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
